--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -6,6 +6,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v4
+    
         - name: Welcome messsage
           run: echo "My first Github action job"
 
@@ -14,4 +17,3 @@ jobs:
 
         - name: Read Files
           run: cat README.md
-          
