--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -10,10 +10,13 @@ jobs:
           uses: actions/checkout@v4
     
         - name: Welcome messsage
-          run: echo "My first Github action job"
+          run: | 
+            echo "My first Github action job"
+            ls
+            cat README.MD
 
-        - name: List Files
-          run: ls
+        # - name: List Files
+        #   run: ls
 
-        - name: Read Files
-          run: cat README.md
+        # - name: Read Files
+        #   run: cat README.md
