--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -10,10 +10,8 @@ jobs:
           uses: actions/checkout@v4
     
         - name: Welcome messsage
-          run: | 
-            echo "My first Github action job"
-            ls
-            cat README.md
+          run: ./sellscript.sh
+            
 
         # - name: List Files
         #   run: ls
