--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -11,8 +11,8 @@ jobs:
     
         - name: Welcome messsage
           run: | 
-            chmod +x shellscript.sh  
-            ./shellscript.sh
+            chmod +x script.sh  
+            ./script.sh
             
 
         # - name: List Files
